@@ -7,15 +7,19 @@
   </head>
   <body id="top">
     <h1 id="headTitle"><img src="/data/icons/48.svg" width="48" height="48" alt="" /></h1>
-    <p><table>
+    <table>
       <tr>
-        <th id="announceExamples" rowspan="5" valign="top"></th>
-        <td>7/(1+2*3) + 1.5 + -.5 + 1e2 + 2**2**3</td>
+        <th id="announceExamples" valign="top"></th>
+        <td>
+          <table>
+            <tr><td>7/(1+2*3) + 1.5 + -.5 + 1e2 + 2**2**3</td></tr>
+            <tr><td>a=#</td></tr>
+            <tr><td>2*a + cos(PI) + log(E) + log(100)/LN10 + sqrt(4)</td></tr>
+            <tr><td>0x2F | 021 "16"</td></tr>
+            <tr><td>Long_name = (c=d=#) + c^d^a</td></tr>
+          </table>
+          </td>
       </tr>
-      <tr><td>a=#</td></tr>
-      <tr><td>2*a + cos(PI) + log(E) + log(100)/LN10 + sqrt(4)</td></tr>
-      <tr><td>0x2F | 021 "16"</td></tr>
-      <tr><td>Long_name = (c=d=#) + c^d^a</td></tr>
       <tr>
         <th id="announceOperators" valign="top"></th>
         <td>+&nbsp;&nbsp;-&nbsp;&nbsp;*&nbsp;&nbsp;/&nbsp;&nbsp;%&nbsp;&nbsp;**&nbsp;&nbsp;&amp;&nbsp;&nbsp;|&nbsp;&nbsp;^</td>
@@ -28,9 +32,15 @@
         <th id="announceConstants" valign="top"></th>
         <td>E=exp(1) PI=acos(-1) SQRT2=sqrt(2) SQRT1_2=sqrt(1/2) LN2=log(2) LN10=log(10) LOG2E=log2(E) LOG10E=log10(E) EPSILON</td>
       </tr>
-      <tr><th id="announceInline" valign="top"></th><td id="textInline"></td></tr>
-      <tr id="lastRow"><th id="announceLast" valign="top"></th></tr>
-    </table></p>
+      <tr>
+        <th id="announceInline" valign="top"></th>
+        <td id="textInline"></td>
+      </tr>
+      <tr>
+        <th id="announceLast" valign="top"></th>
+        <td><table><tr><td id="textLast"></td><td id="lastCol"></td></tr></table></td>
+      </tr>
+    </table>
     <script src="/data/js/append.js" type="text/javascript"></script>
     <script src="/data/js/input.js" type="text/javascript"></script>
     <script src="/data/js/head.js" type="text/javascript"></script>
